--- a/frappe/templates/includes/comments/comments.html
+++ b/frappe/templates/includes/comments/comments.html
@@ -149,7 +149,7 @@
 				comment_email: $("[name='comment_email']").val(),
 				comment: $("[name='comment']").val(),
 				reference_doctype: "{{ reference_doctype or doctype }}",
-				reference_name: "{{ reference_name or name }}",
+				reference_id: "{{ reference_id or id }}",
 				comment_type: "Comment",
 				route: "{{ pathname }}",
 			}
