--- a/frappe/templates/print_format/print_format.html
+++ b/frappe/templates/print_format/print_format.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{{ doc.doctype }}: {{ doc.name }}</title>
+	<title>{{ doc.doctype }}: {{ doc.id }}</title>
 	{{ include_style('print_format.bundle.css') }}
 	<style>{{ css }}</style>
 	{%- if print_style and print_style.css -%}
