--- a/frappe/templates/discussions/discussions_section.html
+++ b/frappe/templates/discussions/discussions_section.html
@@ -1,9 +1,9 @@
 {% set topics = frappe.get_all("Discussion Topic",
-{"reference_doctype": doctype, "reference_docname": docname}, ["name", "title", "owner", "creation"]) %}
+{"reference_doctype": doctype, "reference_docid": docid}, ["id", "title", "owner", "creation"]) %}
 
 
 <div class="discussions-parent {% if single_thread %} is-single-thread {% endif %}"
-	data-doctype="{{ doctype | urlencode }}" data-docname="{{ docname | urlencode }}">
+	data-doctype="{{ doctype | urlencode }}" data-docid="{{ docid | urlencode }}">
 
 	{% if not single_thread %}
 	{% include "frappe/templates/discussions/topic_modal.html" %}
@@ -26,7 +26,7 @@
 		<div class="discussions-sidebar">
 
 			{% for topic in topics %}
-			{% set replies = frappe.get_all("Discussion Reply", {"topic": topic.name})%}
+			{% set replies = frappe.get_all("Discussion Reply", {"topic": topic.id})%}
 			{% include "frappe/templates/discussions/sidebar.html" %}
 
 			{% if loop.index != topics | length %}
@@ -60,7 +60,7 @@
 				<div class="btn btn-default btn-md login-from-discussion"> {{ _("Login") }} </div>
 				{% elif condition is defined and not condition %}
 				<div class="btn btn-default btn-md login-from-discussion" data-redirect="{{ redirect_to }}">
-					{{ button_name }}
+					{{ button_id }}
 				</div>
 				{% else %}
 				{% include "frappe/templates/discussions/button.html" %}
