--- a/frappe/templates/includes/blog/blogger.html
+++ b/frappe/templates/includes/blog/blogger.html
@@ -5,7 +5,7 @@
 
 	<div class="media-body ml-3">
 		<h5 class="mt-0">
-			<a href="/blog?blogger={{ blogger_info.name }}" class="text-dark">{{ blogger_info.full_name }}</a>
+			<a href="/blog?blogger={{ blogger_info.id }}" class="text-dark">{{ blogger_info.full_name }}</a>
 		</h5>
 		{% if blogger_info.bio %}
 		<p class="text-muted">{{ blogger_info.bio }}</p>
