--- a/frappe/templates/includes/head.html
+++ b/frappe/templates/includes/head.html
@@ -2,7 +2,7 @@
 {{ head_html or "" }}
 {%- endif %}
 
-{%- if theme and theme.name != 'Standard' -%}
+{%- if theme and theme.id != 'Standard' -%}
 <link type="text/css" rel="stylesheet" href="{{ theme.theme_url }}">
 
 {%- else -%}
