--- a/frappe/templates/includes/likes/likes.html
+++ b/frappe/templates/includes/likes/likes.html
@@ -31,7 +31,7 @@
 				method: "frappe.templates.includes.likes.likes.like",
 				args: {
 					reference_doctype: "{{ reference_doctype or doctype }}",
-					reference_name: "{{ reference_name or name }}",
+					reference_id: "{{ reference_id or id }}",
 					like,
 					route: "{{ pathname }}",
 				}
