replace pk for folder apps/frappe/frappe/website

--- a/frappe/website/doctype/blog_category/templates/blog_category.html
+++ b/frappe/website/doctype/blog_category/templates/blog_category.html
@@ -4,6 +4,6 @@
 
 {% block script %}
 <script>
-    window.category = "{{ docname }}";
+    window.category = "{{ docid }}";
 </script>
 {% endblock %}
