--- a/frappe/website/doctype/help_article/templates/help_article.html
+++ b/frappe/website/doctype/help_article/templates/help_article.html
@@ -16,7 +16,7 @@
 	</div>
 
 	<p><br><a href="/{{ category.route }}" class='text-muted small'>
-		{{ _("More articles on {0}").format(category.name) }}</a></p>
+		{{ _("More articles on {0}").format(category.id) }}</a></p>
 </article>
 <div class="help-article-feedback mb-6">
 	<hr />
@@ -30,7 +30,7 @@
 <div class="help-article-comments">
 	<hr>
 	<a href="/{{ category.route }}">
-		{{ _("More articles on {0}").format(category.name) }}
+		{{ _("More articles on {0}").format(category.id) }}
 	</a>
 	<hr>
 </div>
@@ -44,7 +44,7 @@ frappe.ready(function() {
 	frappe.set_search_path("/kb");
 	$(".feedback").click(function() {
 		let args = {
-			article: "{{ reference_name or name }}",
+			article: "{{ reference_id or id }}",
 			helpful: this.getAttribute("data-value"),
 		}
 
