--- a/frappe/website/doctype/web_page/templates/web_page.html
+++ b/frappe/website/doctype/web_page/templates/web_page.html
@@ -20,7 +20,7 @@
 {%- else -%}
 <div class="webpage-content">
 	{% include "templates/includes/slideshow.html" %}
-	<article class="web-page-content" id="{{ name }}" {% if text_align -%}style="text-align: {{ text_align }}"{%- endif %}>
+	<article class="web-page-content" id="{{ id }}" {% if text_align -%}style="text-align: {{ text_align }}"{%- endif %}>
 	{{ main_section or "" }}
 	</article>
 	{% if enable_comments -%}
