--- a/frappe/templates/doc.html
+++ b/frappe/templates/doc.html
@@ -58,7 +58,7 @@
 
 
 {% macro container_attributes() -%}
-id="page-{{ name or route | e }}" data-path="{{ pathname | e }}"
+id="page-{{ id or route | e }}" data-path="{{ pathname | e }}"
 {%- if page_or_generator=="Generator" %}source-type="Generator" data-doctype="{{ doctype }}"{%- endif %}
 {%- if source_content_type %}source-content-type="{{ source_content_type }}"{%- endif %}
 {%- endmacro %}
