--- a/frappe/templates/emails/document_follow.html
+++ b/frappe/templates/emails/document_follow.html
@@ -25,7 +25,7 @@
 			<div>
 				<ul class="list-unstyled" style="line-height: 1.7">
 					{% for data in timeline %}
-						{% if (data.doctype == doc.reference_doctype and data.doc_name == doc.reference_docid) %}
+						{% if (data.doctype == doc.reference_doctype and data.doc_id == doc.reference_docid) %}
 							{% if data.type == "comment" %}
 								<li>
 									<span style ='color:#8d99a6!important'>
