--- a/frappe/templates/signup.html
+++ b/frappe/templates/signup.html
@@ -3,7 +3,7 @@
         <div class="form-group">
             <label class="form-label sr-only" for="signup_fullname">{{ _("Full Name") }}</label>
             <input type="text" id="signup_fullname" class="form-control" placeholder="{{ _('Jane Doe') }}"
-                required autofocus autocomplete="name">
+                required autofocus autocomplete="id">
         </div>
         <div class="form-group">
             <label class="form-label sr-only" for="signup_email">{{ _("Email") }}</label>
