fix: toggle full width not work

--- a/frappe/public/scss/desk/form.scss
+++ b/frappe/public/scss/desk/form.scss
@@ -79,6 +79,14 @@
 	margin: auto !important;
 }
 
+.full-width .section-head {
+    max-width: 100% !important;
+}
+
+.full-width .section-body {
+    max-width: 100% !important;
+}
+
 #doctype-form_builder_tab .section-body {
 	max-width: 100% !important;
 }
