feat: 将grid-form的宽度调成页面宽度的80%,之前的宽度太窄

--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -511,7 +511,8 @@
 	overflow: auto;
 	margin: auto;
 	padding: var(--padding-sm) var(--padding-md);
-	max-width: 865px;
+	// max-width: 865px;
+	width: 80%;
 	position: fixed;
 	top: 5%;
 	left: 50%;
