fix: workspace里card编辑模式样式异常

--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -1160,6 +1160,7 @@ body {
 								justify-content: space-between;
 								height: 100%;
 								padding: 0 10px;
+								flex: 0 0;
 							}
 
 							&:hover {
