--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -32,13 +32,16 @@
 
 	&.with-filter {
 		height: 66px;
+
 		.grid-row:nth-child(2) {
+
 			.row-check,
 			.row-index {
 				background-color: var(--fg-color);
 			}
 		}
 	}
+
 	.filter-row {
 		background-color: var(--bg-color);
 
@@ -55,17 +58,21 @@
 		padding: 4px 8px !important;
 		background-color: var(--subtle-fg);
 	}
+
 	.row-check,
 	.row-index {
 		position: sticky;
 		left: 0;
 		z-index: 1;
 	}
+
 	.row-index {
 		left: 31px;
 	}
+
 	.grid-static-col {
 		padding: 6px 8px !important;
+
 		.static-area {
 			&.reqd:after {
 				content: " *";
@@ -123,6 +130,7 @@
 .grid-body .data-row {
 	@include get_textstyle("sm", "regular");
 	color: var(--text-muted);
+
 	.row-check,
 	.row-index {
 		position: sticky;
@@ -130,6 +138,7 @@
 		background-color: var(--fg-color);
 		z-index: 1;
 	}
+
 	.row-index {
 		left: 31px;
 	}
@@ -224,7 +233,7 @@
 	flex-grow: 0;
 }
 
-.grid-row > .row {
+.grid-row>.row {
 	.col:last-child {
 		border-right: none;
 		min-width: 0;
@@ -237,6 +246,7 @@
 		border-right: 1px solid var(--table-border-color);
 		// overflow: hidden;
 	}
+
 	.sticky-grid-col {
 		position: sticky;
 		z-index: 1;
@@ -256,6 +266,7 @@
 
 	.btn-open-row {
 		line-height: unset;
+
 		div {
 			margin-left: var(--margin-xs);
 		}
@@ -265,9 +276,11 @@
 		// TODO: Dark and Light Mode
 		--control-bg: var(--neutral);
 		--input-disabled-bg: var(--gray-50);
+
 		.grid-static-col {
 			padding: 0px !important;
 		}
+
 		.grid-static-col.row-index {
 			padding: var(--grid-padding) !important;
 		}
@@ -366,27 +379,33 @@
 			line-height: 1.3 !important;
 		}
 	}
+
 	.data-row {
+
 		div[data-fieldname="options"],
 		div[data-fieldtype="Text Editor"] {
 			height: 40px;
 		}
 	}
+
 	.grid-row:not(.grid-row-open) {
-		.awesomplete > ul {
+		.awesomplete>ul {
 			position: fixed !important;
 			left: auto !important;
 			top: auto;
 			width: 250px !important;
 		}
 	}
+
 	.grid-static-col {
 		background-color: var(--fg-color);
+
 		&.sticky-grid-col {
 			position: sticky;
 			z-index: 1;
 		}
 	}
+
 	// check if the awesomplete dropdown is hidden
 	.grid-static-col:has(.awesomplete > ul:not([hidden])) {
 		z-index: 2;
@@ -394,6 +413,7 @@
 }
 
 @media (max-width: 767px) {
+
 	// lesser padding for controls
 	.editable-row .frappe-control {
 		padding-top: 0px !important;
@@ -403,7 +423,7 @@
 	}
 }
 
-.row-data > .row {
+.row-data>.row {
 	margin-left: var(--margin-md);
 }
 
@@ -412,6 +432,7 @@
 	background-color: var(--fg-color);
 
 	@include transition(0.2s);
+
 	// REDESIGN TODO: Fix border bottom for last item
 	&:last-child {
 		border-bottom-left-radius: var(--border-radius);
@@ -432,6 +453,7 @@
 	}
 
 	.col-sm-6 {
+
 		.editor-toolbar-text-group,
 		.editor-toolbar-align-group {
 			display: none;
@@ -517,11 +539,17 @@
 	top: 5%;
 	left: 50%;
 	transform: translate(-50%, 0%);
+
 	.grid-form-body {
 		max-height: 80vh;
 		overflow-x: hidden;
 		overflow-y: scroll;
 	}
+}
+
+.main-section.expanded .grid-row-open .form-in-grid {
+	width: calc(80% - var(--left-sidebar-width) * 0.4);
+	left: calc(50% + var(--left-sidebar-width) / 2);
 }
 
 .grid-form-heading {
@@ -541,6 +569,7 @@
 .grid-header-toolbar {
 	display: flex;
 	justify-content: space-between;
+
 	.row-actions {
 		button:not(:last-child) {
 			margin-left: var(--margin-xs);
@@ -557,13 +586,16 @@
 .grid-custom-buttons:empty {
 	padding: 0;
 }
+
 .grid-footer {
 	margin-top: var(--margin-sm);
 }
+
 .grid-footer,
 .grid-custom-buttons {
 	padding: var(--padding-sm) 0px;
 	background-color: var(--fg-color);
+
 	.btn {
 		box-shadow: none;
 		margin-top: -3px;
@@ -620,6 +652,7 @@
 .grid-footer-toolbar {
 	padding: var(--padding-md) var(--padding-sm) var(--padding-xs) var(--padding-sm);
 	border-top: 1px solid var(--border-color);
+
 	span {
 		margin-right: var(--margin-xs);
 	}
@@ -657,10 +690,12 @@
 	overflow-x: clip;
 	white-space: normal;
 	overflow-y: unset;
+
 	.form-grid {
 		left: 0px !important;
 	}
 }
+
 .sortable-handle span {
 	width: 31px;
 	display: block;
@@ -669,89 +704,109 @@
 .data-row.row {
 	flex-wrap: nowrap;
 }
+
 .frappe-control[data-fieldtype="Table"].form-group:has(.column-limit-reached) {
 	overflow-x: clip;
 }
+
 .column-limit-reached {
 	background-color: var(--subtle-accent);
 	border-top-left-radius: var(--border-radius-md);
 	border-top-right-radius: var(--border-radius-md);
 	border: 1px solid var(--table-border-color);
 	overflow-y: hidden;
+
 	.form-grid {
 		display: grid;
 		grid-auto-rows: min-content;
 		border: unset;
+
 		.grid-static-col.col-xs-1 {
 			flex: 1 0 60px;
 			width: 60px;
 		}
+
 		.grid-static-col.col-xs-2 {
 			flex: 1 0 100px;
 			width: 100px;
 		}
+
 		.grid-static-col.col-xs-3 {
 			flex: 1 0 140px;
 			width: 140px;
 		}
+
 		.grid-static-col.col-xs-4 {
 			flex: 1 0 200px;
 			width: 200px;
 		}
+
 		.grid-static-col.col-xs-5 {
 			flex: 1 0 250px;
 			width: 250px;
 		}
+
 		.grid-static-col.col-xs-6 {
 			flex: 1 0 300px;
 			width: 300px;
 		}
+
 		.grid-static-col.col-xs-7 {
 			flex: 1 0 350px;
 			width: 350px;
 		}
+
 		.grid-static-col.col-xs-8 {
 			flex: 1 0 400px;
 			width: 400px;
 		}
+
 		.grid-static-col.col-xs-9 {
 			flex: 1 0 450px;
 			width: 450px;
 		}
+
 		.grid-static-col.col-xs-10 {
 			flex: 1 0 500px;
 			width: 500px;
 		}
+
 		.grid-static-col.col-xs-11 {
 			flex: 1 0 550px;
 			width: 550px;
 		}
+
 		.grid-static-col.col-xs-12 {
 			flex: 1 0 600px;
 			width: 600px;
 		}
-		.grid-row > .row .col:last-child,
-		.grid-row > .dialog-assignment-row .col:first-child,
-		.grid-row > .dialog-assignment-row .col:last-child {
+
+		.grid-row>.row .col:last-child,
+		.grid-row>.dialog-assignment-row .col:first-child,
+		.grid-row>.dialog-assignment-row .col:last-child {
 			max-width: 30px;
 			min-width: 30px;
 			position: sticky;
 			right: 0;
 			z-index: 1;
 		}
-		.grid-row > .row .col:nth-child(2),
-		.grid-row > .dialog-assignment-row .col:nth-child(2) {
+
+		.grid-row>.row .col:nth-child(2),
+		.grid-row>.dialog-assignment-row .col:nth-child(2) {
 			max-width: 40px;
 			min-width: 40px;
 		}
+
 		.grid-heading-row .grid-row .data-row.row,
 		.grid-body .rows .grid-row .data-row.row {
 			justify-content: space-between;
 		}
 	}
+
 	scrollbar-width: auto;
 	scrollbar-color: auto;
 }
+
 .grid-scroll-bar {
 	overflow-x: auto;
 	height: 12px;
@@ -774,48 +829,59 @@
 			display: block;
 		}
 	}
+
 	.column-limit-reached {
 		.form-grid {
 			.grid-static-col.col-xs-2 {
 				flex: 1 0 90px;
 				width: 90px;
 			}
+
 			.grid-static-col.col-xs-3 {
 				flex: 1 0 120px;
 				width: 120px;
 			}
+
 			.grid-static-col.col-xs-4 {
 				flex: 1 0 160px;
 				width: 160px;
 			}
+
 			.grid-static-col.col-xs-5 {
 				flex: 1 0 200px;
 				width: 200px;
 			}
+
 			.grid-static-col.col-xs-6 {
 				flex: 1 0 240px;
 				width: 240px;
 			}
+
 			.grid-static-col.col-xs-7 {
 				flex: 1 0 300px;
 				width: 300px;
 			}
+
 			.grid-static-col.col-xs-8 {
 				flex: 1 0 350px;
 				width: 350px;
 			}
+
 			.grid-static-col.col-xs-9 {
 				flex: 1 0 400px;
 				width: 400px;
 			}
+
 			.grid-static-col.col-xs-10 {
 				flex: 1 0 450px;
 				width: 450px;
 			}
+
 			.grid-static-col.col-xs-11 {
 				flex: 1 0 500px;
 				width: 500px;
 			}
+
 			.grid-static-col.col-xs-12 {
 				flex: 1 0 550px;
 				width: 550px;
