--- a/frappe/public/scss/common/grid.scss
+++ b/frappe/public/scss/common/grid.scss
@@ -309,7 +309,7 @@
 			border: 0px;
 			padding-top: 10px;
 			padding-bottom: 10px;
-			height: 38px;
+			height: 39.5px;
 		}
 
 		.link-btn {
@@ -338,6 +338,8 @@
 			text-align: right;
 		}
 	}
+
+
 
 	.grid-static-col[data-fieldtype="Button"] .field-area {
 		margin-top: var(--margin-xs);
@@ -779,9 +781,9 @@
 			width: 600px;
 		}
 
-		.grid-row>.row .col:last-child,
+		.last-col-is-action .grid-row>.row .col:last-child,
 		.grid-row>.dialog-assignment-row .col:first-child,
-		.grid-row>.dialog-assignment-row .col:last-child {
+		.last-col-is-action .grid-row>.dialog-assignment-row .col:last-child {
 			max-width: 30px;
 			min-width: 30px;
 			position: sticky;
